--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
           </ul>
         </li>
 
-        <li class="navbar-item m-end-auto">
-          <a href="">
+        <li class="navbar-item m-end-auto dropdown-menu-hover">
             <i class="fa-solid fa-caret-down"></i>
-            <span> ENG </span>
-          </a>
+            <span>EN</span>
+            <ul class="dropdown-menu-body">
+              <li class="dropdown-menu-item"><a href="">Farsi</a></li>
+              <li class="dropdown-menu-item"><a href="">Turkish</a></li>
+            </ul>
         </li>
       
       </ul>
@@ -105,7 +107,7 @@
 
 
     
-    <!-- main body header -->
+    <!-- main body index  start -->
     <header class="header">
       <div class="header-left">
         <img
@@ -126,6 +128,6 @@
         </div>
       </div>
     </header>
-    <!-- main body header -->
+    <!-- main body index end -->
   </body>
 </html>
