--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </li>
 
         <li class="navbar-item">
-          <a href="#">
+          <a href="#about">
             <span> About me </span>
           </a>
         </li>
@@ -122,8 +122,10 @@
 
       <div class="header-right">
         <div class="header-right-body">
-          Hi, i'm <span class="alisharify">Ali Sharify</span><br />
-          a <span class="developer">Developer</span>
+          <span>Hi, i'm</span>
+          <span class="alisharify">Ali Sharify</span>
+          <br />
+          <span>Web</span><span class="developer">Developer</span>
         </div>
         <div class="header-middle-footer">
           <button class="hire_me">Hire Me</button>
@@ -131,5 +133,44 @@
       </div>
     </header>
     <!-- main body index end -->
+
+    <main>
+      <section class="info-self" id="about">
+        <h1 class="about-me">About Me</h1>
+        <div class="hr-info"></div>
+        <div class="info-container">
+
+          <div class="info-left">
+            <h3 class="info-left-title">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam,
+              qui?
+            </h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit
+              exercitationem eaque saepe autem modi tempore, excepturi suscipit
+              ipsum veritatis assumenda reiciendis iure neque distinctio, sit
+              voluptatem culpa eius odit soluta voluptate totam provident
+              similique, dolorum repudiandae! Aut incidunt neque expedita
+              aspernatur. Animi quis beatae aliquam in a iure et, reiciendis ea
+              unde incidunt iste? Fugit, qui et fugiat laborum non eos eum ut
+              optio explicabo perferendis odit impedit commodi, saepe, mollitia
+              beatae. Incidunt quisquam nesciunt voluptate cupiditate eveniet
+              ad, sunt vitae quia obcaecati nulla! At fugit perferendis quia
+              saepe omnis molestias consequatur esse officia nemo impedit,
+              voluptas voluptate hic ipsam perspiciatis quaerat animi fuga
+              nostrum. Impedit eligendi, alias quo magni amet odio nihil placeat
+              reiciendis quasi vero quaerat veniam? Aspernatur error
+              necessitatibus minus ex aut eum expedita hic iusto voluptatem
+              sint, quos numquam, consequuntur illo nam doloremque. Quas placeat
+              neque temporibus quidem magnam quisquam, rem qui quasi corporis
+              blanditiis vero?
+            </p>
+          </div>
+          <div class="info-right">
+            <img src="./image/about.JPG" class="info-img" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
